fix: collapse、empty、switch样式优化

--- a/packages/udesign-ui/src/components/collapse/collapse.scss
+++ b/packages/udesign-ui/src/components/collapse/collapse.scss
@@ -34,6 +34,7 @@ $module: ud-collapse;
 	&-active {
 		.#{$module}-header {
 			color: $collapse-color-primary-active;
+			font-weight: 700;
 		}
 
 		.#{$module}-icon {
@@ -50,7 +51,6 @@ $module: ud-collapse;
 
 		.#{$module}-header {
 			background: $collapse-color-primary-bordered;
-			border: $collapse-border-width $collapse-border-style $collapse-border-color;
 			border-radius: $collapse-border-radius-header $collapse-border-radius-header 0 0;
 			margin: 0;
 			cursor: pointer;
