--- a/packages/udesign-ui/src/components/tabs/variables.scss
+++ b/packages/udesign-ui/src/components/tabs/variables.scss
@@ -2,6 +2,7 @@
 $tabs-color-primary-active: var(--ud-tabs-color-primary-active, var(--ud-color-primary)); // 默认态标签页高亮
 $tabs-color-primary-unactive: var(--ud-tabs-color-primary-unactive, rgba(var(--ud-purple-1))); // 默认态标签页默认背景色
 
+$tabs-font-color: var(--tabs-font-color, rgba(var(--ud-gray-9))); // 标签页文字颜色
 $tabs-font-size-small: var(--tabs-font-size-small, 12px); // 标签页文字字号-小
 $tabs-font-size-middle: var(--tabs-font-size-middle, 14px); // 标签页文字字号-中
 $tabs-font-size-large: var(--tabs-font-size-large, 16px); // 标签页文字字号-大
